--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/setup.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
-    "start": "node src/server.js",
+    "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "postdeploy": "npm run migrate:production",
+    "test": "mocha --require test/setup.js"
+  },
+  "engines": {
+    "node": ">= 6.9.4",
+    "npm": ">= 4.4.0"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +29,7 @@
     "knex": "^0.21.15",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "postgrator-cli": "^3.2.0",
     "uuid": "^8.3.2",
     "valid-url": "^1.0.9",
     "winston": "^3.3.3",
@@ -32,7 +39,6 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "postgrator-cli": "^3.2.0",
     "supertest": "^6.0.1"
   }
 }
