--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "migrate:production": "heroku run npm run migrate",
     "predeploy": "npm audit",
-    "deploy": "git push heroku main",
+    "deploy": "git push heroku master",
     "postdeploy": "npm run migrate:production",
     "test": "mocha --require test/setup.js"
   },
